[fix][build] BookieRackAffinityMapping compile
Signed-off-by: Zixuan Liu <nodeces@gmail.com>